5/6th of the new navigation UI done - Inverted themes page done - Other themes page done - Removed some stuff

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -163,7 +163,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="#141414"
+        app:cardBackgroundColor="#151515"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -329,7 +329,7 @@
                                     android:layout_marginTop="66dp"
                                     android:layout_marginEnd="16dp"
                                     android:layout_marginRight="16dp"
-                                    android:layout_marginBottom="4dp"
+                                    android:layout_marginBottom="2dp"
                                     android:fontFamily="@font/timeburnernormal"
                                     android:text="View all"
                                     android:textColor="#fff"
@@ -428,8 +428,7 @@
                             android:id="@+id/cardViewButton2"
                             android:layout_width="0dp"
                             android:layout_height="95dp"
-                            android:onClick="downloadParser"
-                            android:tag="1"
+                            android:onClick="openNavInverted"
                             android:visibility="visible"
                             app:cardBackgroundColor="@android:color/transparent"
                             app:cardCornerRadius="12dp"
@@ -451,7 +450,7 @@
                                     android:layout_marginTop="66dp"
                                     android:layout_marginEnd="16dp"
                                     android:layout_marginRight="16dp"
-                                    android:layout_marginBottom="8dp"
+                                    android:layout_marginBottom="14dp"
                                     android:fontFamily="@font/timeburnernormal"
                                     android:text="View all"
                                     android:textColor="#fff"
@@ -537,8 +536,7 @@
                             android:id="@+id/cardViewButton3"
                             android:layout_width="0dp"
                             android:layout_height="75dp"
-                            android:onClick="downloadParser"
-                            android:tag="1"
+                            android:onClick="openNavOther"
                             android:visibility="visible"
                             app:cardBackgroundColor="@android:color/transparent"
                             app:cardCornerRadius="12dp"
@@ -594,6 +592,7 @@
                             android:layout_marginStart="4dp"
                             android:layout_marginLeft="4dp"
                             android:layout_marginBottom="4dp"
+                            android:onClick="openSteam"
                             android:text="Steam"
                             android:textColor="@color/steam2"
                             android:textStyle="bold"
