--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,40 +17,12 @@
         <item
             android:id="@+id/navigation_home"
             android:title="Pure black themes" />
-    </group>
-
-    <group android:enabled="false">
-        <item android:title="Inverted themes">
-        </item>
-    </group>
-
-    <group
-        android:id="@+id/invertedThemes"
-        android:checkableBehavior="single">
-
         <item
-            android:id="@+id/nav_inverted"
-            android:title="Inverted" />
+            android:id="@+id/navigation_invertedThemes"
+            android:title="Other themes"/>
         <item
-            android:id="@+id/nav_inverted_inferno"
-            android:title="Inverted Inferno" />
-    </group>
-
-    <group android:enabled="false">
-        <item android:title="Other themes">
-        </item>
-    </group>
-
-    <group
-        android:id="@+id/otherThemes"
-        android:checkableBehavior="single">
-
-        <item
-            android:id="@+id/nav_aospex"
-            android:title="AOSPExtended" />
-        <item
-            android:id="@+id/nav_steam"
-            android:title="Steam" />
+            android:id="@+id/navigation_otherThemes"
+            android:title="Other themes"/>
     </group>
 
     <group android:checkableBehavior="single">
