New navigation UI done - Translated everything in italian too

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,7 +73,6 @@
                         android:layout_marginRight="5dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
-                        android:inputType="textMultiLine"
                         android:text="@string/news1Content"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
@@ -187,7 +186,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Pure black themes"
+                    android:text="@string/pure_black_themes"
                     android:textColor="#fff"
                     android:textSize="26sp"
                     android:textStyle="bold"
@@ -204,7 +203,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Inverted themes"
+                    android:text="@string/inverted_themes"
                     android:textColor="#fff"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -221,7 +220,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Other themes"
+                    android:text="@string/other_themes"
                     android:textColor="#fff"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -296,7 +295,7 @@
                             android:fontFamily="@font/timeburnernormal"
                             android:maxEms="20"
                             android:singleLine="false"
-                            android:text="Pure black backgrounds \nSome of them have a custom wallpaper"
+                            android:text="@string/pure_black_string_home"
                             android:textColor="#C3C3C3"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="@+id/cardViewButton1"
@@ -331,7 +330,7 @@
                                     android:layout_marginRight="16dp"
                                     android:layout_marginBottom="2dp"
                                     android:fontFamily="@font/timeburnernormal"
-                                    android:text="View all"
+                                    android:text="@string/view_all"
                                     android:textColor="#fff"
                                     android:textStyle="bold"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -417,7 +416,7 @@
                             android:fontFamily="@font/timeburnernormal"
                             android:maxEms="20"
                             android:singleLine="false"
-                            android:text="White backgrounds \n"
+                            android:text="@string/inverted_string_home"
                             android:textColor="#C3C3C3"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="@+id/cardViewButton2"
@@ -452,7 +451,7 @@
                                     android:layout_marginRight="16dp"
                                     android:layout_marginBottom="14dp"
                                     android:fontFamily="@font/timeburnernormal"
-                                    android:text="View all"
+                                    android:text="@string/view_all"
                                     android:textColor="#fff"
                                     android:textStyle="bold"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -525,7 +524,7 @@
                             android:fontFamily="@font/timeburnernormal"
                             android:maxEms="20"
                             android:singleLine="false"
-                            android:text="Anything else"
+                            android:text="@string/other_string_home"
                             android:textColor="#C3C3C3"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="@+id/cardViewButton3"
@@ -560,7 +559,7 @@
                                     android:layout_marginRight="16dp"
                                     android:layout_marginBottom="8dp"
                                     android:fontFamily="@font/timeburnernormal"
-                                    android:text="View all"
+                                    android:text="@string/view_all"
                                     android:textColor="#fff"
                                     android:textStyle="bold"
                                     app:layout_constraintBottom_toBottomOf="parent"
