--- a/app/src/main/res/layout/fragment_navigation_other.xml
+++ b/app/src/main/res/layout/fragment_navigation_other.xml
@@ -64,7 +64,7 @@
                             android:layout_marginRight="8dp"
                             android:layout_marginBottom="8dp"
                             android:fontFamily="@font/timeburnernormal"
-                            android:text="TAKE ME HOME"
+                            android:text="@string/take_me_home"
                             android:textColor="#000"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Themes"
+                    android:text="@string/themes"
                     android:textColor="#fff"
                     android:textSize="26sp"
                     app:layout_constraintBottom_toTopOf="@+id/cardView2"
@@ -138,7 +138,7 @@
                             android:layout_marginRight="8dp"
                             android:layout_marginBottom="8dp"
                             android:fontFamily="@font/timeburnernormal"
-                            android:text="Other themes"
+                            android:text="@string/other_themes"
                             android:textColor="#fff"
                             android:textSize="24sp"
                             app:layout_constraintBottom_toTopOf="@+id/textView18"
@@ -158,10 +158,9 @@
                             android:layout_marginBottom="8dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:gravity="center"
-                            android:inputType="textMultiLine"
                             android:maxEms="20"
                             android:singleLine="false"
-                            android:text="All the other themes\nThese themes fit no previous category"
+                            android:text="@string/other_string_navigation"
                             android:textColor="#C3C3C3"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
