--- a/app/src/main/res/layout/fragment_navigation_pureblack.xml
+++ b/app/src/main/res/layout/fragment_navigation_pureblack.xml
@@ -931,7 +931,7 @@
                             android:layout_marginRight="8dp"
                             android:layout_marginBottom="8dp"
                             android:fontFamily="@font/timeburnernormal"
-                            android:text="TAKE ME HOME"
+                            android:text="@string/take_me_home"
                             android:textColor="#000"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -948,7 +948,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Top themes"
+                    android:text="@string/favorite_themes"
                     android:textColor="#fff"
                     android:textSize="26sp"
                     app:layout_constraintBottom_toTopOf="@+id/cardView2"
@@ -963,7 +963,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Red themes"
+                    android:text="@string/red_themes"
                     android:textColor="@color/invInferno"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/cardView3"
@@ -977,7 +977,7 @@
                     android:layout_height="39dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Green themes"
+                    android:text="@string/green_themes"
                     android:textColor="@color/monster"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="@+id/cardView4"
@@ -994,7 +994,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Blue themes"
+                    android:text="@string/blue_themes"
                     android:textColor="@color/oxygen"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -1011,7 +1011,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Orange themes"
+                    android:text="@string/orange_themes"
                     android:textColor="@color/orange"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -1028,7 +1028,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="Purple themes"
+                    android:text="@string/purple_themes"
                     android:textColor="@color/phlox"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -1095,14 +1095,15 @@
                             android:id="@+id/textView13"
                             android:layout_width="wrap_content"
                             android:layout_height="39dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginLeft="8dp"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginLeft="16dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginRight="8dp"
-                            android:layout_marginBottom="8dp"
+                            android:layout_marginBottom="13dp"
                             android:fontFamily="@font/timeburnernormal"
-                            android:text="Pure black themes"
+                            android:gravity="center"
+                            android:text="@string/pure_black_string_home"
                             android:textColor="#fff"
                             android:textSize="24sp"
                             app:layout_constraintBottom_toTopOf="@+id/textView18"
@@ -1122,10 +1123,9 @@
                             android:layout_marginBottom="8dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:gravity="center"
-                            android:inputType="textMultiLine"
                             android:maxEms="20"
                             android:singleLine="false"
-                            android:text="Pure black backgrounds \nSome of them have a custom wallpaper"
+                            android:text="@string/pure_black_string_home"
                             android:textColor="#C3C3C3"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
