--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,26 +16,26 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/navigation_home"
-            android:title="Pure black themes" />
+            android:title="@string/pure_black_themes" />
         <item
             android:id="@+id/navigation_invertedThemes"
-            android:title="Other themes"/>
+            android:title="@string/inverted_themes"/>
         <item
             android:id="@+id/navigation_otherThemes"
-            android:title="Other themes"/>
+            android:title="@string/other_themes"/>
     </group>
 
     <group android:checkableBehavior="single">
-        <item android:title="Quick links">
+        <item android:title="@string/quick_links">
             <menu>
                 <item
                     android:id="@+id/nav_openchannel"
                     android:icon="@drawable/ic_menu_gallery"
-                    android:title="Open channel" />
+                    android:title="@string/open_channel" />
                 <item
                     android:id="@+id/nav_contact"
                     android:icon="@drawable/ic_menu_send"
-                    android:title="Contact me" />
+                    android:title="@string/contact_me" />
             </menu>
         </item>
     </group>
