+ Reworked theme pages so they are Amoled-Friendly (why weren't they in the first place you might ask, well, there's no answer to that) + Same thing as above but for the home page and the navigation pages (pure black thems, inverted themes and other themes) + Added a back button in the themes pages (you guys asked me so don't tell me it's useless as I knew it in the first place)

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,8 @@
                     android:layout_height="match_parent"
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/walldisrep" />
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -63,7 +64,7 @@
                         android:layout_height="60dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_square_teal" />
+                        app:srcCompat="@drawable/ic_square_disrespect" />
 
                     <TextView
                         android:id="@+id/textView7"
@@ -91,7 +92,7 @@
                         android:fontFamily="@font/timeburnernormal"
                         android:onClick="openTeal"
                         android:text="@string/view"
-                        android:textColor="@color/teal"
+                        android:textColor="@color/disrespectBlue"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
