--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,9 @@
 
     <color name="phlox">#df00ff</color>
     <color name="saints">#7c31be</color>
+    <color name="disrespect">#f832c0</color>
+    <color name="disrespectBlue">#509cda</color>
+
 
     <color name="invInferno">#bb052d</color>
     <color name="aospextended">#21ef8b</color>
