--- a/app/src/main/res/layout/fragment_disrespect.xml
+++ b/app/src/main/res/layout/fragment_disrespect.xml
@@ -19,7 +19,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="125dp"
                 android:layout_marginLeft="125dp"
-                android:layout_marginTop="26dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="125dp"
                 android:layout_marginRight="125dp"
                 android:layout_marginBottom="12dp"
@@ -64,7 +64,7 @@
                 android:layout_height="324dp"
                 android:layout_marginTop="15dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/saints"
+                android:src="@drawable/disrespect"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -80,8 +80,8 @@
                 android:layout_marginRight="84dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/timeburnernormal"
-                android:text="ABTheme SAINTS"
-                android:textColor="#7c31be"
+                android:text="ABTheme DISRESPECT"
+                android:textColor="@color/disrespect"
                 android:textSize="26sp"
                 app:layout_constraintBottom_toTopOf="@+id/cardView4"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -100,8 +100,8 @@
                 android:layout_marginRight="85dp"
                 android:layout_marginBottom="8dp"
                 android:onClick="downloadParser"
-                android:tag="7"
-                app:cardBackgroundColor="#7c31be"
+                android:tag="22"
+                app:cardBackgroundColor="@color/disrespect"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="15dp"
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -125,7 +125,7 @@
                         android:layout_marginRight="8dp"
                         android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
-                        android:text="@string/version_saints"
+                        android:text="@string/version_disrespect"
                         android:textColor="#000"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -146,7 +146,7 @@
                 android:layout_marginRight="10dp"
                 android:fontFamily="@font/timeburnernormal"
                 android:gravity="center"
-                android:text="@string/lastUpdate_saints"
+                android:text="@string/lastUpdate_disrespect"
                 android:textSize="14sp"
 
                 app:layout_constraintEnd_toEndOf="parent"
@@ -200,13 +200,13 @@
                         android:layout_marginEnd="50dp"
                         android:layout_marginRight="50dp"
                         android:layout_marginBottom="50dp"
-                        android:onClick="openDisrespect"
+                        android:onClick="openPhlox"
                         android:scaleType="fitCenter"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/imageView7"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView14"
-                        app:srcCompat="@drawable/ic_square_disrespect" />
+                        app:srcCompat="@drawable/ic_square_phlox" />
 
                     <ImageView
                         android:id="@+id/imageView7"
@@ -218,13 +218,13 @@
                         android:layout_marginEnd="152dp"
                         android:layout_marginRight="152dp"
                         android:layout_marginBottom="50dp"
-                        android:onClick="openPhlox"
+                        android:onClick="openSaints"
                         android:scaleType="fitCenter"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView6"
                         app:layout_constraintTop_toBottomOf="@+id/cardView6"
-                        app:srcCompat="@drawable/ic_square_phlox" />
+                        app:srcCompat="@drawable/ic_square_saints" />
 
                     <TextView
                         android:id="@+id/textView15"
@@ -238,8 +238,8 @@
                         android:layout_marginBottom="15dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
-                        android:onClick="openDisrespect"
-                        android:text="DISRESPECT"
+                        android:onClick="openPhlox"
+                        android:text="PHLOX"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/imageView6"
@@ -258,8 +258,8 @@
                         android:layout_marginBottom="15dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
-                        android:onClick="openPhlox"
-                        android:text="PHLOX"
+                        android:onClick="openSaints"
+                        android:text="SAINTS"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/imageView7"
