--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -90,7 +90,7 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
-                        android:onClick="openTeal"
+                        android:onClick="openDisrespect"
                         android:text="@string/view"
                         android:textColor="@color/disrespectBlue"
                         android:textSize="12sp"
@@ -110,7 +110,7 @@
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:onClick="downloadParser"
-                        android:tag="21"
+                        android:tag="22"
                         android:text="@string/download"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/textView8"
