--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="quetzal">#e03e41</color>
     <color name="red">#ff1928</color>
     <color name="redleaf">#f84f43</color>
+    <color name="inferno">#b31818</color>
+
 
     <color name="greenSunset">#22f8a0</color>
     <color name="mint">#a5d6a7</color>
